log
ju.,  2 de oct. de 2025 23:40:36: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
vi.,  3 de oct. de 2025  0:01:59: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:75:13: error: unused variable 'j' [-Werror=unused-variable]
         int j = 3*(k%3) + (p%3);
             ^
cc1.exe: all warnings being treated as errors
5ec01c3
vi.,  3 de oct. de 2025  0:02:58: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e110151
vi.,  3 de oct. de 2025  0:04:28: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|2
total_score: 45/70
1a32968
vi.,  3 de oct. de 2025 11:30:01: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c27132f
vi.,  3 de oct. de 2025 11:35:22: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:134:7: error: 'n' undeclared (first use in this function)
   if(!n) return NULL;
       ^
sudoku.c:134:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:141:20: error: void value not ignored as it ought to be
     Node* actual = popFront(pila);
                    ^~~~~~~~
001c9ed
vi.,  3 de oct. de 2025 11:36:59: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:138:19: error: 'n' undeclared (first use in this function)
   pushFront(pila, n);
                   ^
sudoku.c:138:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:141:20: error: void value not ignored as it ought to be
     Node* actual = popFront(pila);
                    ^~~~~~~~
8564000
vi.,  3 de oct. de 2025 11:37:24: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:141:20: error: void value not ignored as it ought to be
     Node* actual = popFront(pila);
                    ^~~~~~~~
6c76265
vi.,  3 de oct. de 2025 11:46:03: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  10|0
total_score: 70/70
e60ffb9
